# promptLingo

./: ### The Expert-Driven Brand & Design System Prompt-2.txt  .gitignore  .netlify-ignore  ACTION_PLAN.md  API_INTEGRATION.md  AUDIO_PLAYBACK_FIX.md  AUDIO_RECORDING_FIX.md  AUDIO_RECORDING_FIXES.md  AUTHENTICATION_QUICK_START.md  BACKEND_DEPLOYMENT_GUIDE.md  BROWSER_TTS_SETUP.md  BUILD_FIX_SUMMARY.md  COMPLETE_DEPLOYMENT_FIX.md  CORS_SETUP_GUIDE.md  CURRENT_PROJECT_STATUS.md  DATABASE_SETUP_COMPLETE.md  DEBUGGING_API_KEY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES_SUMMARY.md  DUPLICATE_FIX.md  ELEVENLABS_DIAGNOSTIC_GUIDE.md  ELEVENLABS_SETUP_GUIDE.md  ELEVENLABS_TTS_COMPLETE_FIX.md  ENHANCED_AUDIO_FEATURES.md  ENHANCED_TRANSLATOR_FEATURES.md  ESLINT_BUILD_FIX.md  ESLINT_FIXES.md  FINAL_DEPLOYMENT_FIX.md  FIXES_APPLIED.md  GET_STARTED_WITH_WASM.md  GOOGLE_AUTH_IMPLEMENTATION_COMPLETE.md  GOOGLE_AUTH_SETUP.md  GOOGLE_OAUTH_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_STEPS.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  IOS_MICROPHONE_FIX.md  LANDING_PAGE_CONFIGURATION.md  MIGRATION_SUMMARY.md  (+62 more)
buisnesModel/: promptlingo_bmc.html
client/: .env.example  .env.production  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/public/: _headers  index.html  manifest.json
python-dev/: README.md  requirements.txt  streamlit_app.py
server/: .env.example  index.js  package-lock.json  package.json  test-wasm.js
wasm-text-processor/: Cargo.toml  README.md  build-all.sh  build-nodejs.sh  build-web.sh  build.sh
wasm-text-processor/src/: lib.rs
(+132 files in other folders)
