[package]
name = "wasm-text-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde_json = "1.0"

# For text processing
regex = "1.10"
unicode-segmentation = "1.10"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[profile.release]
# Optimize for size and speed
opt-level = "s"
lto = true
debug = false
panic = "abort"
codegen-units = 1

[profile.release.package."*"]
opt-level = "s"
