[package]
name = "wasm-text-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# For text processing
regex = "1.10"
unicode-segmentation = "1.10"

# Optional web-sys features (only for web target)
[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "console",
  "Performance",
  "Window",
]

[features]
default = []
web = ["web-sys"]
nodejs = []

[profile.release]
# Optimize for size and speed
opt-level = "s"
lto = true
debug = false
panic = "abort"
codegen-units = 1

[profile.release.package."*"]
opt-level = "s"
